feat: swagger for post model
